refactor: Todo 기능 개선 및 Slack 알림 기능 수정 - TodosEntity 날짜 필드 제거, TodoStatus 정리, Slack 알림 테스트 Mock 기반으로 수정, build.gradle 의존성 정리